# OrionPy

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: process.py
