[project]
name = "orionpy"
version = "0.1.0"
description = ""
authors = [
    {name = "godspeed_31",email = "parikshith200@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy (>=7.1.0,<8.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.3"
pytest = "^8.4.2"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
